--- a/app/views/room_diagram/index.html.erb
+++ b/app/views/room_diagram/index.html.erb
@@ -2,9 +2,6 @@
 
 
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#roomModal">
-  Launch demo modal
-</button>
 
 <div class="modal" id="roomModal" tabindex="-1" role="dialog">
   <div class="modal-bottom" role="document">
@@ -38,7 +35,7 @@
 <div>
   <nav class="page-section" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
     <div class="row">
-      <div class="col-6">
+      <div class="col-sm-6">
         <div class="d-flex justify-content-start">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Lễ tân</a></li>
@@ -46,14 +43,14 @@
           </ol>
         </div>
       </div>
-      <div class="col-6">
-        <div id="search" class="d-flex justify-content-end">
-          <div class="btn-group has-search">
+      <div class="col-sm-6">
+        <div id="search" class="d-flex">
+          <div class="has-search">
             <div class="dropdown">
               <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Tầng
               </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">Action</a>
                 <a class="dropdown-item" href="#">Another action</a>
                 <a class="dropdown-item" href="#">Something else here</a>
@@ -93,13 +90,13 @@
     </div>
   </div>
   <h3 class="row-title">Tầng 1</h3>
-  <div class="page-section d-flex rooms justify-content-center"  >
+  <div class="page-section d-flex rooms"  >
     <div class="room-wrapper">
       <div class="card" style="" data-toggle="modal" data-target="#roomModal">
         <div class="card-body" style="padding-bottom: 0;">
           <div class="card-text row">
-            <p class="col-6">A101</p>
-            <div class="dropdown col-6 d-flex justify-content-end">
+            <p class="col-md-6">A101</p>
+            <div class="dropdown col-md-6 d-flex justify-content-end">
               <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">
@@ -143,8 +140,8 @@
       <div class="card" style="" data-toggle="modal" data-target="#roomModal">
         <div class="card-body" style="padding-bottom: 0;">
           <div class="card-text row">
-            <p class="col-6">A101</p>
-            <div class="dropdown col-6 d-flex justify-content-end">
+            <p class="col-md-6">A101</p>
+            <div class="dropdown col-md-6 d-flex justify-content-end">
               <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">
@@ -188,8 +185,8 @@
       <div class="card" style="" data-toggle="modal" data-target="#roomModal">
         <div class="card-body" style="padding-bottom: 0;">
           <div class="card-text row">
-            <p class="col-6">A101</p>
-            <div class="dropdown col-6 d-flex justify-content-end">
+            <p class="col-md-6">A101</p>
+            <div class="dropdown col-md-6 d-flex justify-content-end">
               <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">
@@ -233,8 +230,8 @@
       <div class="card" style="" data-toggle="modal" data-target="#roomModal">
         <div class="card-body" style="padding-bottom: 0;">
           <div class="card-text row">
-            <p class="col-6">A101</p>
-            <div class="dropdown col-6 d-flex justify-content-end">
+            <p class="col-md-6">A101</p>
+            <div class="dropdown col-md-6 d-flex justify-content-end">
               <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">
@@ -276,13 +273,13 @@
     </div>
   </div>
   <h3 class="row-title">Tầng 1</h3>
-  <div class="page-section d-flex rooms justify-content-center">
+  <div class="page-section d-flex rooms">
     <div class="room-wrapper">
       <div class="card" style="" data-toggle="modal" data-target="#roomModal">
         <div class="card-body" style="padding-bottom: 0;">
           <div class="card-text row">
-            <p class="col-6">A101</p>
-            <div class="dropdown col-6 d-flex justify-content-end">
+            <p class="col-md-6">A101</p>
+            <div class="dropdown col-md-6 d-flex justify-content-end">
               <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">
@@ -326,8 +323,8 @@
       <div class="card" style="" data-toggle="modal" data-target="#roomModal">
         <div class="card-body" style="padding-bottom: 0;">
           <div class="card-text row">
-            <p class="col-6">A101</p>
-            <div class="dropdown col-6 d-flex justify-content-end">
+            <p class="col-md-6">A101</p>
+            <div class="dropdown col-md-6 d-flex justify-content-end">
               <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">
@@ -371,8 +368,8 @@
       <div class="card" style="" data-toggle="modal" data-target="#roomModal">
         <div class="card-body" style="padding-bottom: 0;">
           <div class="card-text row">
-            <p class="col-6">A101</p>
-            <div class="dropdown col-6 d-flex justify-content-end">
+            <p class="col-md-6">A101</p>
+            <div class="dropdown col-md-6 d-flex justify-content-end">
               <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">
@@ -416,8 +413,8 @@
       <div class="card" style="" data-toggle="modal" data-target="#roomModal">
         <div class="card-body" style="padding-bottom: 0;">
           <div class="card-text row">
-            <p class="col-6">A101</p>
-            <div class="dropdown col-6 d-flex justify-content-end">
+            <p class="col-md-6">A101</p>
+            <div class="dropdown col-md-6 d-flex justify-content-end">
               <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">
