--- a/app/views/room_diagram/index.html.erb
+++ b/app/views/room_diagram/index.html.erb
@@ -3,8 +3,14 @@
 
 
 
-<div class="modal" id="roomModal" tabindex="-1" role="dialog">
+<div class="modal fade" id="roomModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="display:none">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
   <div class="modal-bottom" role="document">
+
    <h3>Phòng A102</h3>
     <p>Trạng thái: đã nhận</p>
     <table class="table">
@@ -93,9 +99,12 @@
   <div class="page-section d-flex rooms"  >
     <div class="room-wrapper">
       <div class="card" style="" data-toggle="modal" data-target="#roomModal">
+
         <div class="card-body" style="padding-bottom: 0;">
           <div class="card-text row">
             <p class="col-md-6">A101</p>
+<!--            <div class="col-md-4 active-reservation d-flex justify-content-center" ><i class="fa fa-chevron-up d-flex justify-content-center"></i></div>-->
+
             <div class="dropdown col-md-6 d-flex justify-content-end">
               <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -461,8 +470,24 @@
 <script type="text/javascript">
     $(document).ready(function(){
         cardHover();
+        cardClick();
+        endModal();
+    })
+    function cardHover() {
+        // $('.active-reservation .fa  ').click(function () {
+        //     if (!$('body').hasClass('modal-open')) // Khi modal mở, đang removeClass pushobject, thì chuột hover => lên lại => xóa
+        //       $(this).closest('.card').toggleClass('pushObject');
+        //
+        // });
+        $('.card').hover(function () {
+            if (!$('body').hasClass('modal-open')) // Khi modal mở, đang removeClass pushobject, thì chuột hover => lên lại => xóa
+                $(this).closest('.card').toggleClass('pushObject');
+
+        });
+    }
+    function cardClick(){
         $('*[data-target="#roomModal"]').click(function(event){
-            if ($(event.target).hasClass('btn'))
+            if ($(event.target).hasClass('btn') || $(event.target).hasClass('fa') )
                 event.stopPropagation();
         });
         $('#roomModal').on('show.bs.modal', function (e) {
@@ -472,13 +497,16 @@
                 $(cardTarget).removeClass('pushObject');
             }
 
+        });
+    }
+    function endModal(){
+        $('.modal').click(function(event){
 
-        });
-    })
-    function cardHover() {
-        $('.card').hover(function () {
-            if (!$('body').hasClass('modal-open')) // Khi modal mở, đang removeClass pushobject, thì chuột hover => lên lại => xóa
-              $(this).toggleClass('pushObject');
-        });
+            if (!$(event.target).closest('.modal-bottom').hasClass('modal-bottom') &&
+                !$(event.target).hasClass('modal-bottom'))
+            {
+                $('.modal close').click();
+            }
+        })
     }
 </script>
